# ProjectGenerator

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  readme.md  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: pylint.yaml  tests.yml
src/pyprogen/: __init__.py  main.py
tests/: test_cli.py  test_main.py
