[metadata]
name = Python Project Generator
description = This program is used to generate boilerplate code for an installable project that can be tested
version = attr: pyprogen.__version__
author = Peter Puska
author_email = ppuska@lasram.hu

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    coloredlogs>=15

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyprogen = pyprogen.main:main

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=3.0
    pylint >= 2.13
    tox >= 3.25
